improved on the transport functions

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/booking/add_space_booking.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/booking/add_space_booking.html
@@ -12,19 +12,14 @@
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
   <div class="container-fluid amel-content-header">
-    <a class="amel-table-list-identifier">Add Items <strong>{{allifquery}}: </strong></a>
+    
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddTransactionDetails' allifquery.id user_var glblslug %}">Transaction</a>
+     <a href="{% url 'allifmaalcommonapp:commonSpaces' user_var glblslug %}">Spaces</a>
+    <a href="{% url 'allifmaalcommonapp:commonSpaceUnits' user_var glblslug %}">Space Units</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddSpaceBookingItems' allifquery.id user_var glblslug %}">Allocate Space</a>
+ 
   
-  <a href="{% url 'allifmaalcommonapp:commonPOToPdf' allifquery.id user_var glblslug %}">Download</a>
-
-  <a href="{% url 'allifmaalcommonapp:commonAddPODetails' allifquery.id user_var glblslug %}">Back to PO</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddPOItems' allifquery.id user_var glblslug %}">Refresh</a>
-    <a href="{% url 'allifmaalcommonapp:commonPOMiscCost' allifquery.id user_var glblslug %}">Misc Costs</a>
-    <a href="{% url 'allifmaalcommonapp:commonPostPO' allifquery.id user_var glblslug %}">Post PO</a>
-    <a href="{% url 'allifmaalcommonapp:commonPurchaseOrders' user_var glblslug %}">Purchase Orders</a>
-    <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' allifquery.id user_var glblslug %}">Synch</a>
-    
-    
   </div>
   
       </div><!--end....header column-->
@@ -38,6 +33,7 @@
 
 
   <div class="row mt-12"> <!--start....table row-->
+    <div class="table-details-content-description">Allocate Space for {{allifquery}} </div>
     <div class="col-md-12"><!--start of the first row body-->
       <div class="allif-form-container">
       
@@ -47,8 +43,12 @@
           <table class="table table-layout">
             <thead>
               <tr class="allif-table-header-row">
-                <td>Item Description</td>
+                <td>Space</td>
+                <td>Unit</td>
                 <td>Quantity</td>
+                <td>Price</td>
+                <td>Amount</td>
+                <td>Booked Date</td>
               
               <td>Navigate</td>
               
@@ -62,22 +62,26 @@
               <tr data-id="{{item.id}}">
               <td><a class="allif-table-links" href="">{{item.space}}</a></td>
             
-          <td>{{item.quantity|floatformat:2|intcomma}}</td>
+              <td>{{item.space_unit}}</td>
+              <td>{{item.quantity|floatformat:2|intcomma}}</td>
+              <td>{{item.space_unit.unitprice|floatformat:2|intcomma}}</td>
+              <td>{{item.space_allocation_amount|floatformat:2|intcomma}}</td>
+              <td>{{item.date|date:'d/m/Y'}}</td>
         
          
                <td>
                 <div class="dropdown allifmaal-content-dropdown">
                   <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
                   <div class="dropdown-content">
-                    <a href="{% url 'allifmaalcommonapp:commonEditSpaceItem' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+                    <a href="{% url 'allifmaalcommonapp:commonEditSpaceBookingItem' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
                     <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
                     
                   </div>
                 </div>
                 <div class="dropdown allif-confirm-action">
                   
-                  <a href="{% url 'allifmaalcommonapp:commonAddSpaceItems' item.space.id user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-                  <a href="{% url 'allifmaalcommonapp:commonDeleteSpaceItem' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+                  <a href="{% url 'allifmaalcommonapp:commonAddSpaceBookingItems' item.trans_number.id user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+                  <a href="{% url 'allifmaalcommonapp:commonDeleteSpaceBookingItem' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
                 </div>
     
               </td>
@@ -87,19 +91,27 @@
         
           </tr>
           {% endfor %}
-
            <tr>
+          
+            <td id="allif-table-sums-section" colspan="4">Total</td>
+            <td id="allif-table-sums-section" colspan="2">{{allifquery.amount|floatformat:2|intcomma}}</td>
+            <td id="allif-table-sums-section" colspan="6"></td>
+            
+          </tr>
+          <tr>
                 <form method='POST' action=''>{% csrf_token %}
                  
                   <td id="allif-table-inline-form">{{form.space}}</td>
-                  <td id="allif-table-inline-form">{{form.trans_number}}</td>
-                 
+                  <td id="allif-table-inline-form">{{form.space_unit}}</td>
+                  <td id="allif-table-inline-form">{{form.quantity}}</td>
                   <td id="allif-table-inline-form"> <input type="submit" value='Add' class="btn btn-success allifmaal-submit-btn"></td>
-                 
+                  <td id="allif-table-sums-section" colspan="8"></td>
+                
                 </form>
                 </tr>
 
-          
+         
+  
          
             </tbody>
           </table>
