--- a/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/quote-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/quote-pdf.html
@@ -14,7 +14,7 @@
 <table class="allif-pdf-table-header-section">
     <tr>
       <th>Quote Details</th>
-      <th>Supplier Details</th>
+      <th>Customer Details</th>
       <th>Terms Details</th>
       
     </tr>
