--- a/allifmaalcommonapp/templates/allifmaalcommonapp/records/progress/add_progress.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/records/progress/add_progress.html
@@ -17,15 +17,9 @@
 
 <div class="container-fluid amel-content-header">
 
-  <a class="amel-table-list-identifier">Add General Ledger Account:</a>
-
   <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  <a href="{% url 'allifmaalcommonapp:commonAddGeneralLedger' user_var glblslug %}">New GL A/C</a>
+  <a href="{% url 'allifmaalcommonapp:commonProgress' allifquery.id user_var glblslug %}">Progresses</a>
   
-  <a href="{% url 'allifmaalcommonapp:commonSpaces' user_var glblslug %}">Spaces</a>
-  
-<a href="{% url 'allifmaalcommonapp:commonSpaceUnits' user_var glblslug %}">Space Units</a>
-
 </div>
 
     </div><!--end....header column-->
@@ -38,7 +32,7 @@
   <div class="allifmaincontainer">
 {% if allifquery_update %}
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Edit {{allifquery}} Warehouse Details</div>
+  <div class="table-details-content-description">Edit {{allifquery}} Progress Details</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -84,8 +78,8 @@
         
             </tr>
             <tr>
-              <td class="allif-fix-table-col">Warehouse</td>
-              <td>{{form.name}}</td>
+              <td class="allif-fix-table-col">Description</td>
+              <td>{{form.description}}</td>
           
               </tr>
         
@@ -102,14 +96,10 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
         
-            </tr>
              <tr>
-            <td class="allif-fix-table-col">Inventory A/C</td>
-            <td>{{form.inventory_account}}</td>
+            <td class="allif-fix-table-col">Recorded On</td>
+            <td>{{form.recorded_on}}</td>
         
             </tr>
  
@@ -139,7 +129,7 @@
 {% else %}
 
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit New General Ledger Account</div>
+  <div class="table-details-content-description">Add New Progress Record For {{allifquery}} </div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -152,40 +142,11 @@
       <div class="table-responsive">
       <table class="table table-layout">
       <tbody>
-      
-        <tr>
-          <td class="allif-fix-table-col">Description</td>
-          <td>{{form.description}}</td>
+          <tr>
+          <td class="allif-fix-table-col">Recorded Date</td>
+          <td>{{form.recorded_on}}</td>
       
           </tr>
-
-        <tr>
-            <td class="allif-fix-table-col">Recorded By</td>
-            <td>{{form.recorded_by}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Transaction</td>
-            <td>{{form.trans_number}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Recorded Date</td>
-            <td>{{form.recorded_on}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Inventory Account</td>
-            <td>{{form.inventory_account}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Amenities</td>
-            <td>{{form.amenities}}</td>
-        
-            </tr>
-            
-           
         </tbody>
         </table>
       </div>
@@ -198,37 +159,14 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Asset</td>
-            <td>{{form.asset}}</td>
         
-            </tr>
         <tr>
-            <td class="allif-fix-table-col">Space Number</td>
-            <td>{{form.space_number}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Space Floor</td>
-            <td>{{form.space_floor}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Space Type</td>
-            <td>{{form.space_type}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Phone</td>
-            <td>{{form.contact_phone}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Staff in Charge</td>
-            <td>{{form.emplyee_in_charge}}</td>
-        
-            </tr>
-           
+          <td class="allif-fix-table-col">Description</td>
+          <td>{{form.description}}</td>
+      
+          </tr>
+
+          
           </tbody>
           </table>
           </div>
@@ -241,33 +179,7 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-        <tr>
-            <td class="allif-fix-table-col">Base Price/Night</td>
-            <td>{{form.base_price_per_night}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Max Occupancy</td>
-            <td>{{form.max_occupancy}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Monthly Rent</td>
-            <td>{{form.monthly_rent}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">Status</td>
-            <td>{{form.current_status}}</td>
-        
-            </tr>
-           
-          
+       
         <tr>
           <td class="allif-fix-table-col">Action</td>
           <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
