--- a/allifmaalcommonapp/templates/allifmaalcommonapp/transactions/transactions.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/transactions/transactions.html
@@ -114,10 +114,10 @@
     <table class="table table-layout">
       <thead>
         <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Transaction No.</td>
+        <td class="allif-fix-table-col">Referrence No.</td>
         
         <td>Code</td>
-        <td>Name</td>
+        <td>Description</td>
         <td>Client</td>
         <td>Date</td>
       
