--- a/allifmaalcommonapp/templates/allifmaalcommonapp/transport/transits.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/transport/transits.html
@@ -128,7 +128,7 @@
     <table class="table table-layout">
       <thead>
         <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Quote No.</td>
+        <td class="allif-fix-table-col">Referrence No.</td>
         <td>Customer</td>
         <td>Value</td>
         <td>Stage</td>
