--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
@@ -32,7 +32,7 @@
   <div class="allifmaincontainer">
 {% if allifquery_update %}
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit New Stock Item</div>
+  <div class="table-details-content-description">Edit {{allifquery_update}} Stock Item</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -171,6 +171,35 @@
             <td class="allif-fix-table-col">Warehouse</td>
             <td>{{form.warehouse}}</td>
           </tr>
+           <tr>
+            <td class="allif-fix-table-col">Normal Range</td>
+            <td>{{form.normal_range}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Units</td>
+            <td>{{form.units}}</td>
+          </tr>   
+           <tr>
+            <td class="allif-fix-table-col">Length</td>
+            <td>{{form.length}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Width</td>
+            <td>{{form.width}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Height</td>
+            <td>{{form.height}}</td>
+          </tr>
+
+           <tr>
+            <td class="allif-fix-table-col">Weight</td>
+            <td>{{form.weight}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Expires On</td>
+            <td>{{form.expires}}</td>
+          </tr>
             <tr>
               <td class="allif-fix-table-col">Action</td>
               <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
@@ -193,7 +222,7 @@
 
 {% else %}
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit New Stock Item</div>
+  <div class="table-details-content-description">Add New Stock Item</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -233,6 +262,22 @@
           <td class="allif-fix-table-col">Supplier Tax Rate</td>
           <td>{{form.suppliertaxrate}}</td>
         </tr>
+         <tr>
+            <td class="allif-fix-table-col">Part Number</td>
+            <td>{{form.partNumber}}</td>
+        
+            </tr>
+          <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
+        
+            </tr>
+             <tr>
+          <td class="allif-fix-table-col">Quantity</td>
+          <td>{{form.quantity}}</td>
+      
+          </tr>
+
         </tbody>
         </table>
       </div>
@@ -246,23 +291,7 @@
        <table class="table table-layout">
         <tbody>
          
-              <tr>
-                <td class="allif-fix-table-col">Part Number</td>
-                <td>{{form.partNumber}}</td>
-            
-                </tr>
-          <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-
-            <tr>
-              <td class="allif-fix-table-col">Quantity</td>
-              <td>{{form.quantity}}</td>
-          
-              </tr>
-
+       
               <tr>
                 <td class="allif-fix-table-col">Buying Price</td>
                 <td>{{form.buyingPrice}}</td>
@@ -279,20 +308,7 @@
             <td class="allif-fix-table-col">Total Units Sold</td>
             <td>{{form.total_units_sold}}</td>
           </tr>
-                  
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
+                <tr>
             <td class="allif-fix-table-col">Standard Cost</td>
             <td>{{form.standardUnitCost}}</td>
         
@@ -315,7 +331,20 @@
             <td>{{form.warehouse}}</td>
           </tr>
 
-           <tr>
+          
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+         <tr>
             <td class="allif-fix-table-col">Item State</td>
             <td>{{form.item_state}}</td>
           </tr>
@@ -326,7 +355,7 @@
            <tr>
             <td class="allif-fix-table-col">Units</td>
             <td>{{form.units}}</td>
-          </tr>
+          </tr>   
            <tr>
             <td class="allif-fix-table-col">Length</td>
             <td>{{form.length}}</td>
