--- a/allifmaalcommonapp/templates/allifmaalcommonapp/transport/add_transit_details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/transport/add_transit_details.html
@@ -35,7 +35,7 @@
 </div>
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 
-<a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">Quotations</a>
+<a href="{% url 'allifmaalcommonapp:commonTransits' user_var glblslug %}">Transportations</a>
 
 
 </div>
@@ -48,7 +48,7 @@
 
   <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details</div>
+  <div class="table-details-content-description">{{allifquery}} Shipment Details</div>
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
     <div class="allif-info-tables">
@@ -60,11 +60,10 @@
       <div class="table-responsive">
       <table class="table table-layout">
       <tbody>
-    
-        <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.company}}</td>
-          </tr>
+      <tr>
+        <td class="allif-fix-table-col">Company</td>
+        <td>{{allifquery.company}}</td>
+        </tr>
       <tr>
         <td class="allif-fix-table-col">Division</td>
         <td>{{allifquery.division}}</td>
@@ -77,12 +76,11 @@
           <td class="allif-fix-table-col">Department</td>
           <td>{{allifquery.department}}</td>
           </tr>
-            
         
-          <tr>
-            <td class="allif-fix-table-col">Carrier</td>
-            <td>{{allifquery.carrier}}</td>
-            </tr>
+        <tr>
+          <td class="allif-fix-table-col">Carrier</td>
+          <td>{{allifquery.carrier}}</td>
+          </tr>
      
           <tr>
             <td class="allif-fix-table-col">Transport number</td>
@@ -92,11 +90,14 @@
               <td class="allif-fix-table-col">Description</td>
               <td>{{allifquery.description}}</td>
               </tr>
-              <tr>
-                <td class="allif-fix-table-col">Status</td>
-                <td>{{allifquery.status}}</td>
-                </tr>
-              
+            <tr>
+              <td class="allif-fix-table-col">Status</td>
+              <td>{{allifquery.status}}</td>
+              </tr>
+               <tr>
+            <td class="allif-fix-table-col">Received On</td>
+            <td>{{allifquery.received_on|date:'d/m/Y'}}</td>
+            </tr>
         </tbody>
         </table>
       </div>
@@ -109,10 +110,11 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-         <tr>
-                <td class="allif-fix-table-col">Expected</td>
-                <td>{{allifquery.expected}}</td>
-                </tr>
+          
+          <tr>
+            <td class="allif-fix-table-col">Expected</td>
+            <td>{{allifquery.expected|date:'d/m/Y'}}</td>
+            </tr>
                  <tr>
                 <td class="allif-fix-table-col">Origin</td>
                 <td>{{allifquery.origin}}</td>
@@ -133,26 +135,20 @@
                 <td class="allif-fix-table-col">Customer</td>
                 <td>{{allifquery.customer}}</td>
                 </tr>
-                    <tr>
-                      <td class="allif-fix-table-col">Delivery Confirmed By</td>
-                      <td>{{allifquery.delivery_confirmed_by_employee}}</td>
-                      </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Delivery Confirmed By</td>
+                  <td>{{allifquery.delivery_confirmed_by_employee}}</td>
+                  </tr>
                     
-                    <tr>
-                      <td class="allif-fix-table-col">Exit Warehouse</td>
-                      <td>{{allifqueryexit_warehouse}}</td>
-                      </tr>
-                      <tr>
-                        <td class="allif-fix-table-col">Entry Warehouse</td>
-                        <td>{{allifquery.entry_warehouse}}</td>
-                        </tr>
-                        <tr>
-                          <td class="allif-fix-table-col">Destination</td>
-                          <td>{{allifquery.destination}}</td>
-                          </tr>
-
-                       
-                        
+                <tr>
+                  <td class="allif-fix-table-col">Exit Warehouse</td>
+                  <td>{{allifquery.exit_warehouse}}</td>
+                  </tr>
+              <tr>
+                <td class="allif-fix-table-col">Entry Warehouse</td>
+                <td>{{allifquery.entry_warehouse}}</td>
+                </tr>
+       
           </tbody>
           </table>
           </div>
@@ -165,48 +161,33 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
-          
-   <tr>
-                          <td class="allif-fix-table-col">Confirmed Customer</td>
-                          <td>{{allifquery.delivery_confirmed_by_customer}}</td>
-                          </tr>
-
-                          <tr>
-                            <td class="allif-fix-table-col">Supplier</td>
-                            <td>{{allifquery.supplier}}</td>
-                            </tr>
-                            <tr>
-                              <td class="allif-fix-table-col">Delivery Notes</td>
-                              <td>{{allifquery.delivery_notes}}</td>
-                              </tr>
-                             
-                                <tr>
-                                  <td class="allif-fix-table-col">Unit of Measure</td>
-                                  <td>{{allifquery.unit_of_measure}}</td>
-                                  </tr>
-                            <tr>
-                              <td class="allif-fix-table-col">Notes</td>
-                              <td>{{allifquery.notes}}</td>
-                              </tr>
-                
-                               <tr>
-                              <td class="allif-fix-table-col">Selling Price With Discount</td>
-                              <td>{{allifquery.selling_price_with_disc|floatformat:2|intcomma}}</td>
-                              </tr>     
-<tr>
-  <td class="allif-fix-table-col">Description</td>
-  <td>{{allifquery.description}}</td>
-  </tr>
-<tr>
-  <td class="allif-fix-table-col">Created By</td>
-  <td>{{allifquery.owner}}</td>
-  </tr>
-
           <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date|date:'d/m/Y'}}</td>
+            <td class="allif-fix-table-col">Destination</td>
+            <td>{{allifquery.destination}}</td>
             </tr>
-          
+
+            <tr>
+            <td class="allif-fix-table-col">Confirmed Customer</td>
+            <td>{{allifquery.delivery_confirmed_by_customer}}</td>
+            </tr>
+
+            <tr>
+              <td class="allif-fix-table-col">Supplier</td>
+              <td>{{allifquery.supplier}}</td>
+              </tr>
+          <tr>
+            <td class="allif-fix-table-col">Delivery Notes</td>
+            <td>{{allifquery.delivery_notes}}</td>
+            </tr>
+                             
+          <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{allifquery.description}}</td>
+            </tr>
+          <tr>
+            <td class="allif-fix-table-col">Created By</td>
+            <td>{{allifquery.owner}}</td>
+            </tr>
             <tr>
               <td class="allif-fix-table-col">Comments</td>
               <td>{{allifquery.comments}}</td>
@@ -230,7 +211,7 @@
 <hr>
 
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit Quote Details</div>
+  <div class="table-details-content-description">Add/Edit {{allifquery}} Shipment Details</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -266,24 +247,31 @@
         
             </tr>
           
-              <tr>
-                <td class="allif-fix-table-col">Description</td>
-                <td>{{form.description}}</td>
-            
-                </tr>
-
-                 <tr>
+              
+          <tr>
             <td class="allif-fix-table-col">Carrier</td>
             <td>{{form.carrier}}</td>
             </tr>
      
           <tr>
-            <td class="allif-fix-table-col">Transport number</td>
+            <td class="allif-fix-table-col">Referrence No.</td>
             <td>{{form.shipment_number}}</td>
             </tr>
-           
+            <tr>
+                <td class="allif-fix-table-col">Description</td>
+                <td>{{form.description}}</td>
+            
+                </tr>
+                 <tr>
+                <td class="allif-fix-table-col">Origin</td>
+                <td>{{form.origin}}</td>
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Destination</td>
+              <td>{{form.destination}}</td>
               
-               
+             </tr>
+          
         </tbody>
         </table>
       </div>
@@ -296,43 +284,46 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-          <tr>
-                <td class="allif-fix-table-col">Status</td>
-                <td>{{form.status}}</td>
-                </tr>
+         <tr>
+            <td class="allif-fix-table-col">Received On</td>
+            <td>{{form.received_on}}</td>
+            </tr>
+
                <tr>
                 <td class="allif-fix-table-col">Expected</td>
                 <td>{{form.expected}}</td>
                 </tr>
-                 <tr>
-                <td class="allif-fix-table-col">Origin</td>
-                <td>{{form.origin}}</td>
+                
+               <tr>
+                <td class="allif-fix-table-col">Status</td>
+                <td>{{form.status}}</td>
                 </tr>
+              
                  <tr>
                 <td class="allif-fix-table-col">Route</td>
                 <td>{{form.via}}</td>
                 </tr>
                  <tr>
-                <td class="allif-fix-table-col">Staff Dispatched</td>
+                <td class="allif-fix-table-col">Dispatched By</td>
                 <td>{{form.dispatched_by}}</td>
                 </tr>
                  <tr>
-                <td class="allif-fix-table-col">Staff Received</td>
+                <td class="allif-fix-table-col">Received By</td>
                 <td>{{form.received_by}}</td>
                 </tr>
-                
+                 
                 
                     <tr>
                       <td class="allif-fix-table-col">Delivery Confirmed By</td>
                       <td>{{form.delivery_confirmed_by_employee}}</td>
                       </tr>
-                    
-                    <tr>
-                      <td class="allif-fix-table-col">Exit Warehouse</td>
-                      <td>{{form.exit_warehouse}}</td>
+                     <tr>
+                      <td class="allif-fix-table-col">Delivery Date</td>
+                      <td>{{form.delivery_confirmation_date_time}}</td>
                       </tr>
-                     
-
+                      
+              
+               
           </tbody>
           </table>
           </div>
@@ -345,25 +336,28 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
+           <tr>
+            <td class="allif-fix-table-col">Exit Point</td>
+            <td>{{form.exit_warehouse}}</td>
+            </tr>
+             <tr>
+          <td class="allif-fix-table-col">Entry Point</td>
+          <td>{{form.entry_warehouse}}</td>
+          </tr>
+              <tr>
+            <td class="allif-fix-table-col">Comments</td>
+            <td>{{form.comments}}</td>
+            </tr>
+
+       
          
-           
+
           <tr>
-                        <td class="allif-fix-table-col">Entry Warehouse</td>
-                        <td>{{allifquery.entry_warehouse}}</td>
-                        </tr>
-                        <tr>
-                          <td class="allif-fix-table-col">Destination</td>
-                          <td>{{form.destination}}</td>
-                          </tr>
+            <td class="allif-fix-table-col">Confirmed Customer</td>
+            <td>{{form.delivery_confirmed_by_customer}}</td>
+            </tr>
 
-                        <tr>
-                          <td class="allif-fix-table-col">Confirmed Customer</td>
-                          <td>{{form.delivery_confirmed_by_customer}}</td>
-                          </tr>
-
-                        
-               
-    <tr>
+      <tr>
         <td class="allif-fix-table-col">Supplier</td>
         <td>{{form.supplier}}</td>
         </tr>
@@ -371,21 +365,12 @@
           <td class="allif-fix-table-col">Delivery Notes</td>
           <td>{{form.delivery_notes}}</td>
           </tr>
-          
-            <tr>
-              <td class="allif-fix-table-col">Unit of Measure</td>
-              <td>{{form.unit_of_measure}}</td>
-              </tr>
-        <tr>
-          <td class="allif-fix-table-col">Notes</td>
-          <td>{{form.notes}}</td>
-          </tr>
-
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
+      
+          <tr>
+            <td class="allif-fix-table-col">Action</td>
+            <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+        
+            </tr>
           </tbody>
           </table>
   </div>
@@ -401,6 +386,93 @@
 
 </div><!--end of main container of the page....-->
 
+<hr>
+
+
+  <div class="row mt-12"> <!--start....table row-->
+      <div class="table-details-content-description">{{allifquery}} Shipment Items</div>
+    <div class="col-md-12"><!--start of the first row body-->
+      <div class="allif-form-container">
+      
+      <div class="row"><!--start of row div --->
+        <div class="allif-scroll-table">
+          <div class="table-responsive allif-full-table">
+          <table class="table table-layout">
+            <thead>
+              <tr class="allif-table-header-row">
+               
+                <td>Item Description</td>
+                <td>Details</td>
+                <td>Quantity</td>
+               
+                <td>Origin</td>
+                <td>Destination</td>
+               <td>Status</td>
+              <td>Navigate</td>
+              
+              <td> . . . </td>
+              <td></td>
+              </tr>
+              </thead>
+              <tbody class="allif-table-body">
+             
+              {% for item in allifqueryset %} 
+              <tr data-id="{{item.id}}">
+              <td><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonShipmentItemDetails' item.id user_var glblslug %}">{{item.items}}</a></td>
+              <td>{{item.details}}</td>
+              <td>{{item.quantity|floatformat:2|intcomma}}</td>
+             
+              <td>{{item.origin}}</td>
+              <td>{{item.destination}}</td>
+               {% if item.status == 'Delivered' %}
+              <td id="allif-work-complete-column">
+                {{item.status}}
+              </td>
+              {% else %}
+              <td>
+                {{item.status}}
+              </td>
+              {% endif %}
+               <td>
+                <div class="dropdown allifmaal-content-dropdown">
+                  <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+                  <div class="dropdown-content">
+                    <a href="{% url 'allifmaalcommonapp:commonEditShipmentItem' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+                    <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+                    
+                  </div>
+                </div>
+                <div class="dropdown allif-confirm-action">
+                  
+                  <a href="{% url 'allifmaalcommonapp:commonAddShipmentItems' item.shipment.id user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+                  <a href="{% url 'allifmaalcommonapp:commonDeleteShipmentItem' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+                </div>
+      
+               
+              </td>
+             <td> . . . </td>
+             <td></td>
+            
+        
+          </tr>
+          {% endfor %}
+
+         
+            </tbody>
+          </table>
+          </div>
+         </div>
+
+        
+                   
+      <!--end of table-->
+          
+            </div><!--end of column 1-->
+        
+        </div><!--end of row div --->
+            
+        </div>
+            </div><!--end of first row body....-->
 <hr>
 
 </div>
